Add cache busting to force QR code update
- Added v=2 parameter to QR code URL to bypass browser cache
- This should force the updated local IP (192.168.0.101) to display

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="subtitle">Connect your iPhone to stream Mac audio</p>
         
         <div class="qr-code">
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=192.168.0.101:3001" alt="QR Code for 192.168.0.101:3001">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=192.168.0.101:3001&v=2" alt="QR Code for 192.168.0.101:3001">
         </div>
         
         <div class="info">
